// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications DIRECT applications should render opened dropdown menu correctly  1`] = `
<body>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div>
    <div
      class="flex flex-col h-full"
    >
      <div
        class="flex justify-between mb-sm items-center px-base pt-base xxxl:px-md xxxl:pt-md"
      >
        <div
          class="flex flex-col gap-xs"
        >
          <h5
            class="heading"
          >
            Application Status
          </h5>
        </div>
      </div>
      <div
        class="applications"
      >
        <div
          class="shared-table"
        >
          <table
            class="shared-table__table !h-full"
          >
            <thead
              class="shared-table__head shared-table__head-cols-5"
            >
              <tr
                class="shared-table__row shared-table__row-0"
              >
                <th
                  class="shared-table__column -header-cell shared-table__column-1 tableHead"
                >
                  Future name
                </th>
                <th
                  class="shared-table__column -header-cell shared-table__column-2 tableHead"
                >
                  Date applied
                </th>
                <th
                  class="shared-table__column -header-cell shared-table__column-3 tableHead"
                >
                  Application Method
                </th>
                <th
                  class="shared-table__column -header-cell shared-table__column-4 tableHead"
                >
                  Status
                </th>
                <th
                  class="shared-table__column -header-cell shared-table__column-5 tableHead"
                />
              </tr>
            </thead>
            <tbody
              class="shared-table__body shared-table__body-cols-5"
            >
              <tr
                class="shared-table__row shared-table__row-1 tableRow"
                data-testid="list-item"
              >
                <td
                  class="shared-table__column shared-table__column-1 tableColumn"
                  data-testid="shared-table-column"
                >
                  <div>
                    <span
                      class="name"
                    >
                      Test direct application
                    </span>
                  </div>
                </td>
                <td
                  class="shared-table__column shared-table__column-2 tableColumn"
                  data-testid="shared-table-column"
                >
                  <span
                    data-state="closed"
                  >
                    <span>
                      N/A
                    </span>
                  </span>
                </td>
                <td
                  class="shared-table__column shared-table__column-3 tableColumn"
                  data-testid="shared-table-column"
                >
                  <span
                    class="applicationMethod"
                  >
                    Direct
                  </span>
                </td>
                <td
                  class="shared-table__column shared-table__column-4 tableColumn"
                  data-testid="shared-table-column"
                >
                  <div
                    class="statusColumn"
                  >
                    <div>
                      <button
                        aria-controls="radix-14"
                        aria-expanded="true"
                        aria-haspopup="menu"
                        class="flex items-center text-font-primary hover:text-primary-500 rounded-xs border border-solid border-transparent focus-visible:border-primary-500"
                        data-state="open"
                        id="radix-12"
                        type="button"
                      >
                        <div
                          class="font-medium leading-lg flex items-center flex items-center gap-xxs group-hover/statement:bg-white bg-neutral-200 text-font-secondary rounded-sm p-xxs text-xs gap-xxs"
                        >
                          Not Started
                        </div>
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0"
                            data-testid="icon"
                          >
                            <div
                              class="h-base w-base"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </td>
                <td
                  class="shared-table__column shared-table__column-5 tableColumn"
                  data-testid="shared-table-column"
                >
                  <div
                    class="flex gap-xs justify-end grow-1 w-full"
                  >
                    <div
                      class="invisible action"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="bg-white rounded-xs"
                        data-state="closed"
                        data-testid="application-context-menu"
                        id="radix-trigger"
                        type="button"
                      >
                        <div
                          class="flex"
                        >
                          <div
                            class="flex align-center justify-center grow-0 shrink-0 p-xs"
                            data-testid="icon"
                          >
                            <div
                              class="h-sm w-sm"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0, -200%); min-width: max-content;"
  >
    <ul
      aria-labelledby="radix-12"
      aria-orientation="vertical"
      class="bg-white rounded-sm py-xxs border border-neutral-300 shadow-200 flex flex-col p-xxs"
      data-align="end"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-14"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); animation: none;"
      tabindex="-1"
    >
      <span
        class="font-bold text-xs py-xs px-sm"
      >
        Change to:
      </span>
      <li
        class="py-xs px-sm hover:bg-primary-200 focus-visible:!outline-none cursor-pointer rounded-xs border border-solid border-transparent focus-visible:border-primary-500 text-primary-500"
        data-highlighted=""
        data-orientation="vertical"
        data-radix-collection-item=""
        role="button"
        tabindex="0"
      >
        <div
          class="flex items-center gap-xxs text-xs leading-lg"
        >
          Not Started
          <div
            class="flex"
          >
            <div
              class="flex align-center justify-center grow-0 shrink-0"
              data-testid="icon"
            >
              <div
                class="h-sm w-sm"
              />
            </div>
          </div>
        </div>
      </li>
      <li
        class="py-xs px-sm hover:bg-primary-200 focus-visible:!outline-none cursor-pointer rounded-xs border border-solid border-transparent focus-visible:border-primary-500"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="button"
        tabindex="-1"
      >
        <div
          class="flex items-center gap-xxs text-xs leading-lg"
        >
          In Progress
        </div>
      </li>
      <li
        class="py-xs px-sm hover:bg-primary-200 focus-visible:!outline-none cursor-pointer rounded-xs border border-solid border-transparent focus-visible:border-primary-500"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="button"
        tabindex="-1"
      >
        <div
          class="flex items-center gap-xxs text-xs leading-lg"
        >
          Completed
        </div>
      </li>
    </ul>
  </div>
  <span
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Applications should render correctly 1`] = `
<div>
  <div
    class="flex flex-col h-full"
  >
    <div
      class="flex justify-between mb-sm items-center px-base pt-base xxxl:px-md xxxl:pt-md"
    >
      <div
        class="flex flex-col gap-xs"
      >
        <h5
          class="heading"
        >
          Application Status
        </h5>
      </div>
    </div>
    <div
      class="applications"
    >
      <div
        class="shared-table"
      >
        <table
          class="shared-table__table !h-full"
        >
          <thead
            class="shared-table__head shared-table__head-cols-5"
          >
            <tr
              class="shared-table__row shared-table__row-0"
            >
              <th
                class="shared-table__column -header-cell shared-table__column-1 tableHead"
              >
                Future name
              </th>
              <th
                class="shared-table__column -header-cell shared-table__column-2 tableHead"
              >
                Date applied
              </th>
              <th
                class="shared-table__column -header-cell shared-table__column-3 tableHead"
              >
                Application Method
              </th>
              <th
                class="shared-table__column -header-cell shared-table__column-4 tableHead"
              >
                Status
              </th>
              <th
                class="shared-table__column -header-cell shared-table__column-5 tableHead"
              />
            </tr>
          </thead>
          <tbody
            class="shared-table__body shared-table__body-cols-5"
          >
            <tr
              class="shared-table__row shared-table__row-1 tableRow"
              data-testid="list-item"
            >
              <td
                class="shared-table__column shared-table__column-1 tableColumn"
                data-testid="shared-table-column"
              >
                <div>
                  <div
                    class="kicker sm secondary pendingLabel"
                  >
                    Needs attention
                  </div>
                  <span
                    class="name"
                  >
                    Texas Christian University
                  </span>
                </div>
              </td>
              <td
                class="shared-table__column shared-table__column-2 tableColumn"
                data-testid="shared-table-column"
              >
                <span
                  data-state="closed"
                >
                  <span>
                    N/A
                  </span>
                </span>
              </td>
              <td
                class="shared-table__column shared-table__column-3 tableColumn"
                data-testid="shared-table-column"
              >
                <span
                  class="applicationMethod"
                >
                  <div />
                </span>
              </td>
              <td
                class="shared-table__column shared-table__column-4 tableColumn"
                data-testid="shared-table-column"
              >
                <div
                  class="statusColumn"
                >
                  <div
                    class="badgeWrapper"
                  >
                    <div
                      class="font-medium leading-lg flex items-center bg-secondary-200 text-secondary-500 rounded-sm p-xxs text-xs gap-xxs"
                    >
                      In Progress
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="shared-table__column shared-table__column-5 tableColumn"
                data-testid="shared-table-column"
              >
                <div
                  class="flex gap-xs justify-end grow-1 w-full"
                >
                  <div
                    class="rounded-xs"
                  >
                    <span
                      data-state="closed"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 !bg-info-100 rounded-xs !text-info-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-base w-base"
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="invisible action"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="menu"
                      class="bg-white rounded-xs"
                      data-state="closed"
                      data-testid="application-context-menu"
                      id="radix-trigger"
                      type="button"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 p-xs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="shared-table__row shared-table__row-2 tableRow"
              data-testid="list-item"
            >
              <td
                class="shared-table__column shared-table__column-1 tableColumn"
                data-testid="shared-table-column"
              >
                <div>
                  <div
                    class="kicker sm secondary pendingLabel"
                  >
                    Needs attention
                  </div>
                  <span
                    class="name"
                  >
                    Yale University
                  </span>
                </div>
              </td>
              <td
                class="shared-table__column shared-table__column-2 tableColumn"
                data-testid="shared-table-column"
              >
                <span
                  data-state="closed"
                >
                  <span>
                    N/A
                  </span>
                </span>
              </td>
              <td
                class="shared-table__column shared-table__column-3 tableColumn"
                data-testid="shared-table-column"
              >
                <span
                  class="applicationMethod"
                >
                  <div />
                </span>
              </td>
              <td
                class="shared-table__column shared-table__column-4 tableColumn"
                data-testid="shared-table-column"
              >
                <div
                  class="statusColumn"
                >
                  <div
                    class="badgeWrapper"
                  >
                    <div
                      class="font-medium leading-lg flex items-center bg-secondary-200 text-secondary-500 rounded-sm p-xxs text-xs gap-xxs"
                    >
                      In Progress
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="shared-table__column shared-table__column-5 tableColumn"
                data-testid="shared-table-column"
              >
                <div
                  class="flex gap-xs justify-end grow-1 w-full"
                >
                  <div
                    class="rounded-xs"
                  >
                    <span
                      data-state="closed"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 !bg-info-100 rounded-xs !text-info-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-base w-base"
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="invisible action"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="menu"
                      class="bg-white rounded-xs"
                      data-state="closed"
                      data-testid="application-context-menu"
                      id="radix-trigger"
                      type="button"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 p-xs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="shared-table__row shared-table__row-3 tableRow"
              data-testid="list-item"
            >
              <td
                class="shared-table__column shared-table__column-1 tableColumn"
                data-testid="shared-table-column"
              >
                <div>
                  <span
                    class="name"
                  >
                    Test direct application
                  </span>
                </div>
              </td>
              <td
                class="shared-table__column shared-table__column-2 tableColumn"
                data-testid="shared-table-column"
              >
                <span
                  data-state="closed"
                >
                  <span>
                    N/A
                  </span>
                </span>
              </td>
              <td
                class="shared-table__column shared-table__column-3 tableColumn"
                data-testid="shared-table-column"
              >
                <span
                  class="applicationMethod"
                >
                  Direct
                </span>
              </td>
              <td
                class="shared-table__column shared-table__column-4 tableColumn"
                data-testid="shared-table-column"
              >
                <div
                  class="statusColumn"
                >
                  <div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="menu"
                      class="flex items-center text-font-primary hover:text-primary-500 rounded-xs border border-solid border-transparent focus-visible:border-primary-500"
                      data-state="closed"
                      id="radix-2"
                      type="button"
                    >
                      <div
                        class="font-medium leading-lg flex items-center flex items-center gap-xxs group-hover/statement:bg-white bg-neutral-200 text-font-secondary rounded-sm p-xxs text-xs gap-xxs"
                      >
                        Not Started
                      </div>
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0"
                          data-testid="icon"
                        >
                          <div
                            class="h-base w-base"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
              <td
                class="shared-table__column shared-table__column-5 tableColumn"
                data-testid="shared-table-column"
              >
                <div
                  class="flex gap-xs justify-end grow-1 w-full"
                >
                  <div
                    class="invisible action"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="menu"
                      class="bg-white rounded-xs"
                      data-state="closed"
                      data-testid="application-context-menu"
                      id="radix-trigger"
                      type="button"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 p-xs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="shared-table__row shared-table__row-4 tableRow"
              data-testid="list-item"
            >
              <td
                class="shared-table__column shared-table__column-1 tableColumn"
                data-testid="shared-table-column"
              >
                <div>
                  <div
                    class="kicker sm secondary pendingLabel"
                  >
                    Needs attention
                  </div>
                  <span
                    class="name"
                  >
                    Harvard direct application to Common 
                  </span>
                </div>
              </td>
              <td
                class="shared-table__column shared-table__column-2 tableColumn"
                data-testid="shared-table-column"
              >
                <span
                  data-state="closed"
                >
                  <span>
                    N/A
                  </span>
                </span>
              </td>
              <td
                class="shared-table__column shared-table__column-3 tableColumn"
                data-testid="shared-table-column"
              >
                <span
                  class="applicationMethod"
                >
                  Direct
                </span>
              </td>
              <td
                class="shared-table__column shared-table__column-4 tableColumn"
                data-testid="shared-table-column"
              >
                <div
                  class="statusColumn"
                >
                  <div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="menu"
                      class="flex items-center text-font-primary hover:text-primary-500 rounded-xs border border-solid border-transparent focus-visible:border-primary-500"
                      data-state="closed"
                      id="radix-4"
                      type="button"
                    >
                      <div
                        class="font-medium leading-lg flex items-center flex items-center gap-xxs group-hover/statement:bg-white bg-secondary-200 text-secondary-500 rounded-sm p-xxs text-xs gap-xxs"
                      >
                        In Progress
                      </div>
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0"
                          data-testid="icon"
                        >
                          <div
                            class="h-base w-base"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
              <td
                class="shared-table__column shared-table__column-5 tableColumn"
                data-testid="shared-table-column"
              >
                <div
                  class="flex gap-xs justify-end grow-1 w-full"
                >
                  <div
                    class="rounded-xs"
                  >
                    <span
                      data-state="closed"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 !bg-info-100 rounded-xs !text-info-500 p-xxs"
                          data-testid="icon"
                        >
                          <div
                            class="h-base w-base"
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="invisible action"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="menu"
                      class="bg-white rounded-xs"
                      data-state="closed"
                      data-testid="application-context-menu"
                      id="radix-trigger"
                      type="button"
                    >
                      <div
                        class="flex"
                      >
                        <div
                          class="flex align-center justify-center grow-0 shrink-0 p-xs"
                          data-testid="icon"
                        >
                          <div
                            class="h-sm w-sm"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
